# sample-oracle-modernization-agent

./: .gitignore  .gitleaksignore  CLAUDE.md  LICENSE  PROJECT_OVERVIEW.md  PR_READY_CHECKLIST.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.kiro/settings/: lsp.json  mcp.json
application-sql-transform-agent/: .gitignore  CLAUDE.md
application-sql-transform-agent/docs/: SYSTEM_DOCUMENTATION.md
application-sql-transform-agent/docs/agents/: SOURCE_ANALYZER_DESIGN.md  TRANSFORM_DESIGN.md  VALIDATE_DESIGN.md
application-sql-transform-agent/example/: README.md  run.sh  setup.sh
application-sql-transform-agent/src/: run_orchestrator.py  run_setup.py  run_source_analyzer.py  run_sql_merge.py  run_sql_review.py  run_sql_test.py  run_sql_transform.py  run_sql_validate.py  run_strategy.py
application-sql-transform-agent/src/core/: display.py  (+2 more)
docs/: LARGE_SCALE_GUIDE.md  MCP_MIGRATION_PLAN.md  ORCHESTRATOR_IMPROVEMENT_PLAN.md  SYSTEM_DOCUMENTATION.md
docs/agents/: ORCHESTRATOR_DESIGN.md  REVIEW_DESIGN.md  TEST_DESIGN.md  TRANSFORM_DESIGN.md  VALIDATE_DESIGN.md
example/: APPLICATION.md  README.md  pom.xml  run.sh  run_example.sh  setup.sh
src/: run_orchestrator.py  run_setup.py  run_sql_review.py  run_sql_test.py  run_sql_transform.py  run_sql_validate.py
src/core/: models.py  state_manager.py
src/reference/: oracle_to_mysql_rules.md  oracle_to_postgresql_rules.md  run_postgresql.sh  setup_oma_control.sh  transform_strategy_template.md
src/utils/: project_paths.py
(+180 files in other folders)
