[project]
name = "oma-sql-transform"
version = "0.1.0"
description = "Application SQL Transform Agent - AI-powered Oracle to PostgreSQL SQL converter (part of OMA)"
requires-python = ">=3.11"
dependencies = [
    "strands-agents>=1.24.0",
    "boto3>=1.42.0",
    "defusedxml>=0.7.1",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
]
